<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.ArtistDetailFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        android:id="@+id/iv_artist"
        />
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/title"

            />
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_marginStart="10dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginEnd="5dp"
        android:layout_gravity="center_vertical"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/like_count"

            />
        <TextView
            android:id="@+id/tv_likecount"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/followers"

            />
        <TextView
            android:id="@+id/tv_followers"
            android:layout_width="wrap_content"
            android:layout_marginStart="10dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_marginEnd="5dp"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_album_desc"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:maxLines="4"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        android:ellipsize="end"
        android:layout_height="wrap_content"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
   <androidx.appcompat.widget.LinearLayoutCompat
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical"
       >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/genre"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        />
       <ProgressBar
           android:id="@+id/progressbar"
           android:layout_width="wrap_content"
           android:visibility="gone"
           android:layout_marginTop="40dp"
           android:layout_gravity="center_horizontal"
           android:layout_centerInParent="true"
           android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_genre"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/top_tracks"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_toptracks"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:text="@string/top_albums"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_topalbums"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:layout_height="wrap_content"/>
   </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>